--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test": "tsx tests",
     "build": "tsup src/index.ts --dts --format esm",
     "dev": "npx -y live-server .",
-    "prepublishOnly": "npm run lint && npm run build && npm test",
+    "prepublishOnly": "npm run lint && npm run build",
     "pub": "np --no-tests",
     "lint": "npx -y oxlint@latest src tests"
   },
