--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": [
     "devtools",
     "playground",
-    "store"
+    "store",
+    "code-position"
   ],
   "homepage": "https://github.com/lovetingyuan/react-atomic-store#readme",
   "repository": {
@@ -19,6 +20,13 @@
   "scripts": {
     "playground": "npm run dev --workspace playground",
     "devtools": "npm run dev --workspace devtools",
-    "build": "npm run build --workspace react-atomic-store"
+    "build:store": "npm run build --workspace react-atomic-store",
+    "build:devtools": "npm run build --workspace devtools"
+  },
+  "devDependencies": {
+    "typescript": "~5.9.0",
+    "@types/node": "^22.17.0",
+    "vite": "npm:rolldown-vite@latest",
+    "@vitejs/plugin-react": "^5.1.0"
   }
 }
