--- a/store/package.json
+++ b/store/package.json
@@ -45,13 +45,11 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
-    "@types/node": "^22.17.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
     "global-jsdom": "26.0.0",
     "np": "^10.2.0",
     "tsup": "^8.5.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.2.2"
+    "tsx": "^4.20.3"
   }
 }
